--- a/XPCFaucetBot/XPCFaucetBot.csproj
+++ b/XPCFaucetBot/XPCFaucetBot.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
     <PackageReference Include="DotNetEnv" Version="1.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
 </Project>
